plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.0'
	id 'io.spring.dependency-management' version '1.1.3'
}

group = 'com.beyond'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

repositories {
	mavenCentral()
}

dependencies {
	// Spring Boot Starters
	// Core
	implementation 'org.springframework.boot:spring-boot-starter'
	implementation 'org.springframework.boot:spring-boot-starter-logging'
	implementation 'jakarta.xml.bind:jakarta.xml.bind-api:3.0.1'
	implementation 'org.glassfish.jaxb:jaxb-runtime:3.0.2'

	// Web
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-websocket'

	// STOMP
	implementation 'org.webjars:stomp-websocket:2.3.4'

	// SockJS
	implementation 'org.webjars:sockjs-client:1.5.1'

	// Security
	implementation 'org.springframework.boot:spring-boot-starter-security'

	// Data
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.redisson:redisson-spring-boot-starter:3.17.7'
//	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.13.5'
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.15.0'
	implementation 'org.springframework.boot:spring-boot-starter-json'


	// Mail
	implementation 'org.springframework.boot:spring-boot-starter-mail'

	// Testing
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	// Logging
	implementation 'org.slf4j:slf4j-api'
	implementation 'ch.qos.logback:logback-classic'
	implementation 'ch.qos.logback:logback-core'

	// JSON Web Token (JWT)
//	implementation 'io.jsonwebtoken:jjwt:0.9.1'
//	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
//	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
//	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	// Lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// Database
	// JDBC
	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
	// // Redis
	// implementation 'redis.clients:jedis'
	// implementation 'org.springframework.data:spring-data-redis'

	// Testing
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testImplementation 'io.projectreactor:reactor-test'
	testImplementation 'org.springframework.security:spring-security-test'

	//	파일처리를 위한 aws 의존성 추가
//	implementation 'software.amazon.awssdk:s3:2.17.58'
	implementation 'software.amazon.awssdk:s3:2.21.0'

	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'org.springframework.security:spring-security-oauth2-client'

	//Webflux
	implementation 'org.springframework.boot:spring-boot-starter-webflux'

	// Google Calendar
	implementation 'com.google.api-client:google-api-client:2.2.0'
//	implementation 'com.google.api-client:google-api-client:2.0.0'
	implementation 'com.google.oauth-client:google-oauth-client-jetty:1.34.1'
	implementation 'com.google.apis:google-api-services-calendar:v3-rev20220715-2.0.0'
	implementation 'com.google.http-client:google-http-client-jackson2:1.42.3'


	// JUnit
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	// Mockito
//	testImplementation 'org.mockito:mockito-core:3.12.4'
	testImplementation 'org.mockito:mockito-core:5.2.0'


	// Kurento Client
	implementation 'org.kurento:kurento-client:6.16.0'

	// shedLock
	implementation "net.javacrumbs.shedlock:shedlock-provider-jdbc-template:5.8.0"
	implementation 'net.javacrumbs.shedlock:shedlock-spring:5.8.0'
//	implementation 'net.javacrumbs.shedlock:shedlock-spring:4.44.0'
//	implementation 'net.javacrumbs.shedlock:shedlock-provider-redis-spring:4.44.0'
	implementation 'net.javacrumbs.shedlock:shedlock-provider-redis-spring:5.8.0'

	//elasticSearch
	implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'

	// AWS openSearch
	implementation "org.opensearch.client:opensearch-rest-client:2.11.0"
	implementation "org.opensearch.client:opensearch-java:2.7.0"
	implementation "jakarta.json:jakarta.json-api"


	// implementation "net.javacrumbs.shedlock:shedlock-provider-jdbc-template:4.24.0"
	// implementation "net.javacrumbs.shedlock:shedlock-provider-redis-spring:4.24.0"
	// implementation "net.javacrumbs.shedlock:shedlock-spring:4.24.0"

	//kafka
	implementation 'org.springframework.kafka:spring-kafka'


	//sms
//	compile group: 'net.nurigo', name: 'javaSDK', version: '2.2'
	implementation group: 'net.nurigo', name: 'javaSDK', version: '2.2'


	// stmp
	implementation 'org.springframework.boot:spring-boot-starter-mail'

// openvidu
	implementation 'io.openvidu:openvidu-java-client:2.23.0'

}


tasks.named('test') {
	useJUnitPlatform()
}
